[project]
name = "nostr-game-timestamping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SeekerErebus", email = "jadeofsapphire@pm.me" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
