[project]
name = "nostr-game-timestamping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SeekerErebus", email = "jadeofsapphire@pm.me" }
]
requires-python = ">=3.10"
dependencies = [
    "nostr-sdk>=0.44.0",
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "python-bitcoinlib>=0.12.2",
    "requests>=2.32.5",
]

[project.scripts]
nostr-game-timestamping = "nostr_game_timestamping:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "hatch-vcs>=0.5.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
]
